@@ -27,8 +27,9 @@
       <fieldconfig fieldExpr="name" showInSummary="true" showInInlineCollection="true" showInResults="true"/>
       <fieldconfig fieldExpr="department.name" showInSummary="true" showInResults="true" showInInlineCollection="true"/>
       <fieldconfig fieldExpr="department.company.name" showInSummary="true" showInResults="true" showInInlineCollection="false"/>
-      <fieldconfig fieldExpr="age" showInSummary="false" showInResults="false" showInInlineCollection="true"/>
+      <fieldconfig fieldExpr="age" showInSummary="false" showInResults="false" showInInlineCollection="true" showInQB="false"/>
       <fieldconfig fieldExpr="fullTime" showInSummary="false" showInResults="true" showInInlineCollection="true"/>
+      <fieldconfig fieldExpr="address" showInQB="false"/>
       <fieldconfig fieldExpr="address.address" showInSummary="true" showInResults="true" showInInlineCollection="true"/>
       <fieldconfig fieldExpr="seniority" showInSummary="true" showInInlineCollection="true" showInResults="true"/>
       <!-- the doNotTruncate flag, when set to true, stops the object details
